ls202/lesson_6/float_and_positioning.css
body {
    margin: 10px auto;
    font-family: Arial, Helvetica, sans-serif;
    width: 900px;
    max-width: 900px;
    border: 2px solid rgb(168, 165, 165);
    color: rgb(82, 80, 80);
}
article {
    margin-left: 10px;
    padding: 10px;
    box-sizing: border-box;
    width: 900px;
}
h1, h2, h3 {
    color: rgba(190, 51, 1, 0.865);
    margin: 25px 0;
}

h1 {
    font-size: 1.5rem;
}

h2 {
    font-size: 1.25rem;
}

h3 {
    size: 1rem;
}

p {
    line-height: 2rem;;
}

div {
    margin: 40px 0;
}

.anchor-box {
    border: 2px rgb(47, 47, 47) dashed;
    position: relative;
    width: 600px;
    left: 45px;
    padding: 30px;
}

a {
    text-decoration: none;
    color: rgb(47, 47, 47) ;

}


.margin a{
    margin: 30px;
}

.padding a {
    background-color: rgb(2, 131, 39);
    border: 2px solid rgb(10, 111, 39);
    color: white;
    padding: 28px 30px;

}

.float-box {
    padding: 60px 60px 60px 0;
}

.float-box a{
    position: relative;
    float: top;
    left: 40px;
    margin: 15px 10px;
    padding: 25px 30px;
}

